// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shows stats when files are added 1`] = `
"**Total**

Files count | Total bundle size | % Changed
----------- | ----------------- | ---------
2 → 7 | 1.29 MB → 1.34 MB (+53.65 kB)<br />N/A → 386.44 kB (gzip) | +4.07%"
`;

exports[`Shows stats when files are added 2`] = `
"**Added**

Asset | File Size | % Changed
----- | --------- | ---------
296.chunk.js | 0 B → 124.57 kB (+124.57 kB)<br />0 B → 35.05 kB (gzip) | -
288.chunk.js | 0 B → 57.24 kB (+57.24 kB)<br />0 B → 16.33 kB (gzip) | -
920.chunk.js | 0 B → 54.98 kB (+54.98 kB)<br />0 B → 17.08 kB (gzip) | -
912.chunk.js | 0 B → 44.37 kB (+44.37 kB)<br />0 B → 14.31 kB (gzip) | -
699.chunk.js | 0 B → 26.39 kB (+26.39 kB)<br />0 B → 6.14 kB (gzip) | -

**Removed**

No assets were removed

**Bigger**

Asset | File Size | % Changed
----- | --------- | ---------
manifest.json | 91 B → 551 B (+460 B)<br />N/A → 151 B (gzip) | +505.49%

**Smaller**

Asset | File Size | % Changed
----- | --------- | ---------
app.bundle.js | 1.29 MB → 1.04 MB (-254.35 kB)<br />N/A → 297.38 kB (gzip) | -19.29%

**Unchanged**

No assets were unchanged"
`;

exports[`Shows stats when files are hidden 1`] = `
"**Total**

Files count | Total bundle size | % Changed
----------- | ----------------- | ---------
0 | 0 B | 0%"
`;

exports[`Shows stats when files are hidden 2`] = `
"**Added**

No assets were added

**Removed**

No assets were removed

**Bigger**

No assets were bigger

**Smaller**

No assets were smaller

**Unchanged**

No assets were unchanged"
`;

exports[`Shows stats when files are removed 1`] = `
"**Total**

Files count | Total bundle size | % Changed
----------- | ----------------- | ---------
7 → 2 | 1.34 MB → 1.29 MB (-53.65 kB)<br />386.44 kB → N/A (gzip) | -3.91%"
`;

exports[`Shows stats when files are removed 2`] = `
"**Added**

No assets were added

**Removed**

Asset | File Size | % Changed
----- | --------- | ---------
296.chunk.js | 124.57 kB → 0 B (-124.57 kB)<br />35.05 kB → 0 B (gzip) | -100%
288.chunk.js | 57.24 kB → 0 B (-57.24 kB)<br />16.33 kB → 0 B (gzip) | -100%
920.chunk.js | 54.98 kB → 0 B (-54.98 kB)<br />17.08 kB → 0 B (gzip) | -100%
912.chunk.js | 44.37 kB → 0 B (-44.37 kB)<br />14.31 kB → 0 B (gzip) | -100%
699.chunk.js | 26.39 kB → 0 B (-26.39 kB)<br />6.14 kB → 0 B (gzip) | -100%

**Bigger**

Asset | File Size | % Changed
----- | --------- | ---------
app.bundle.js | 1.04 MB → 1.29 MB (+254.35 kB)<br />297.38 kB → N/A (gzip) | +23.91%

**Smaller**

Asset | File Size | % Changed
----- | --------- | ---------
manifest.json | 551 B → 91 B (-460 B)<br />151 B → N/A (gzip) | -83.48%

**Unchanged**

No assets were unchanged"
`;

exports[`Shows stats when files are unchanged 1`] = `
"**Total**

Files count | Total bundle size | % Changed
----------- | ----------------- | ---------
7 | 1.34 MB<br />386.44 kB | 0%"
`;

exports[`Shows stats when files are unchanged 2`] = `
"**Added**

No assets were added

**Removed**

No assets were removed

**Bigger**

No assets were bigger

**Smaller**

No assets were smaller

**Unchanged**

Asset | File Size | % Changed
----- | --------- | ---------
app.bundle.js | 1.04 MB<br />297.38 kB | 0%
296.chunk.js | 124.57 kB<br />35.05 kB | 0%
288.chunk.js | 57.24 kB<br />16.33 kB | 0%
920.chunk.js | 54.98 kB<br />17.08 kB | 0%
912.chunk.js | 44.37 kB<br />14.31 kB | 0%
699.chunk.js | 26.39 kB<br />6.14 kB | 0%
manifest.json | 551 B<br />151 B | 0%"
`;

exports[`displays module information when files are added/removed/changed 1`] = `
"
<details>
<summary>Changeset</summary>

File | Δ | Size
---- | - | ----
\`src/client/this/file/has/a/long/name/so-that-it-will-hopefully-wrap.tsx\` | 🆕 +2.72 kB | 0 B → 2.72 kB
\`src/client/this-file-was-added.ts\` | 🆕 +1.46 kB | 0 B → 1.46 kB
\`src/client/this-is-another-file-with-a-long-name-to-test-the-table-sizing.tsx\` | 🆕 +1.04 kB | 0 B → 1.04 kB
\`src/client/helpers/this-file-is-much-larger.ts\` | 📈 +11.66 kB (+865.77%) | 1.35 kB → 13.01 kB
\`src/client/this-file-grew-larger.tsx\` | 📈 +200 B (+35.59%) | 562 B → 762 B
\`src/client/helpers/this-file-grew-smaller.ts\` | 📉 -200 B (-7.94%) | 2.46 kB → 2.26 kB
\`src/client/this-file-is-much-smaller.tsx\` | 📉 -11.66 kB (-99.92%) | 11.67 kB → 10 B
\`src/client/routes.tsx\` | 🔥 -2.72 kB (-100%) | 2.72 kB → 0 B
\`src/client/this-file-will-be-deleted.ts\` | 🔥 -1.46 kB (-100%) | 1.46 kB → 0 B
\`src/client/render-memex.tsx\` | 🔥 -1.04 kB (-100%) | 1.04 kB → 0 B

</details>
"
`;

exports[`displays no module information when unchanged 1`] = `
"
Changeset

No files were changed"
`;

exports[`does not display module information when it does not exist 1`] = `""`;
